bugfix: input text now visible at login

--- a/public/css/MainSass.css
+++ b/public/css/MainSass.css
@@ -254,7 +254,7 @@ input {
   border-bottom: 1.25px solid white;
   box-sizing: border-box;
   background-color: white;
-  color: white;
+  color: black;
   font-size: 1em;
   font-family: 'Karla' sans-serif; }
   input::placeholder {
