--- a/src/components/Main/Elements/_elements.scss
+++ b/src/components/Main/Elements/_elements.scss
@@ -72,7 +72,7 @@ input {
   box-sizing: border-box;
   background-color: white;
 
-  color: white;
+  color: black;
   font-size: 1em;
   font-family: 'Karla' sans-serif;
 
